--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -29,10 +29,10 @@ body {
 }
 .display-2 {
   font-family: 'Rubik', sans-serif;
-  font-size: 3rem;
+  font-size: 2rem;
 }
 .display-2 > .mbr-iconfont {
-  font-size: 4.8rem;
+  font-size: 3.2rem;
 }
 .display-4 {
   font-family: 'Rubik', sans-serif;
@@ -50,10 +50,10 @@ body {
 }
 .display-7 {
   font-family: 'Roboto', sans-serif;
-  font-size: 1.4rem;
+  font-size: 1.2rem;
 }
 .display-7 > .mbr-iconfont {
-  font-size: 2.24rem;
+  font-size: 1.92rem;
 }
 /* ---- Fluid typography for mobile devices ---- */
 /* 1.4 - font scale ratio ( bootstrap == 1.42857 ) */
@@ -67,9 +67,9 @@ body {
     line-height: calc( 1.4 * (2.1374999999999997rem + (4.25 - 2.1374999999999997) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-2 {
-    font-size: 2.4rem;
-    font-size: calc( 1.7rem + (3 - 1.7) * ((100vw - 20rem) / (48 - 20)));
-    line-height: calc( 1.4 * (1.7rem + (3 - 1.7) * ((100vw - 20rem) / (48 - 20))));
+    font-size: 1.6rem;
+    font-size: calc( 1.35rem + (2 - 1.35) * ((100vw - 20rem) / (48 - 20)));
+    line-height: calc( 1.4 * (1.35rem + (2 - 1.35) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-4 {
     font-size: 0.8rem;
@@ -649,13 +649,13 @@ a:hover {
   box-shadow: none;
   color: #565656;
   font-family: 'Roboto', sans-serif;
-  font-size: 1.4rem;
+  font-size: 1.2rem;
   line-height: 1.43;
   min-height: 3.5em;
   padding: 1.07em .5em;
 }
 .form-control > .mbr-iconfont {
-  font-size: 2.24rem;
+  font-size: 1.92rem;
 }
 .form-control,
 .form-control:focus {
@@ -1367,38 +1367,49 @@ body {
 .cid-qDb3DIvsMa {
   background-image: url("../../../assets/images/jumbotron.jpg");
 }
-.cid-qDb4mA4ngR {
+.cid-qDbqXfg7sz {
   padding-top: 60px;
   padding-bottom: 60px;
-  background-image: url("../../../assets/images/jumbotron.jpg");
+  background-image: url("../../../assets/images/mbr-1919x1080.jpg");
 }
-.cid-qDb4mA4ngR .mbr-section-subtitle {
-  text-align: left;
-}
-.cid-qDb4mA4ngR .mbr-text {
-  text-align: left;
-}
-.cid-qDbarOM4QX {
-  padding-top: 30px;
-  padding-bottom: 30px;
-  background-color: #5e2835;
-}
-.cid-qDbarOM4QX .line {
+.cid-qDboL9rN6I {
+  padding-top: 60px;
+  padding-bottom: 60px;
   background-color: #ffffff;
+}
+.cid-qDboL9rN6I .counter-container {
+  color: #767676;
+}
+.cid-qDboL9rN6I .counter-container ol {
+  margin-bottom: 0;
+  counter-reset: myCounter;
+}
+.cid-qDboL9rN6I .counter-container ol li {
+  margin-bottom: 1rem;
+}
+.cid-qDboL9rN6I .counter-container ol li {
+  list-style: none;
+  padding-left: .5rem;
+}
+.cid-qDboL9rN6I .counter-container ol li:before {
+  position: absolute;
+  left: 0px;
+  margin-top: -10px;
+  counter-increment: myCounter;
+  content: counter(myCounter);
+  display: inline-block;
+  text-align: center;
+  margin: 5px 10px;
+  line-height: 40px;
+  transition: all .2s;
   color: #ffffff;
-  align: center;
-  height: 2px;
-  margin: 0 auto;
+  background: #55b4d4;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
 }
-.cid-qDbarOM4QX .section-text {
-  padding: 2rem 0;
-  color: #ffffff;
-}
-.cid-qDbarOM4QX .inner-container {
-  margin: 0 auto;
-}
-@media (max-width: 768px) {
-  .cid-qDbarOM4QX .inner-container {
-    width: 100% !important;
-  }
+.cid-qDbp32kcLP {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-image: url("../../../assets/images/mbr-2-1620x1080.jpg");
 }
