--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1372,42 +1372,14 @@ body {
   padding-bottom: 60px;
   background-image: url("../../../assets/images/mbr-1919x1080.jpg");
 }
-.cid-qDboL9rN6I {
+.cid-qDbGV6fZtS {
   padding-top: 60px;
   padding-bottom: 60px;
   background-color: #ffffff;
 }
-.cid-qDboL9rN6I .counter-container {
+.cid-qDbGV6fZtS .mbr-text,
+.cid-qDbGV6fZtS blockquote {
   color: #767676;
-}
-.cid-qDboL9rN6I .counter-container ol {
-  margin-bottom: 0;
-  counter-reset: myCounter;
-}
-.cid-qDboL9rN6I .counter-container ol li {
-  margin-bottom: 1rem;
-}
-.cid-qDboL9rN6I .counter-container ol li {
-  list-style: none;
-  padding-left: .5rem;
-}
-.cid-qDboL9rN6I .counter-container ol li:before {
-  position: absolute;
-  left: 0px;
-  margin-top: -10px;
-  counter-increment: myCounter;
-  content: counter(myCounter);
-  display: inline-block;
-  text-align: center;
-  margin: 5px 10px;
-  line-height: 40px;
-  transition: all .2s;
-  color: #ffffff;
-  background: #16667b;
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  border-radius: 0;
 }
 .cid-qDbp32kcLP {
   padding-top: 60px;
