--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1381,6 +1381,9 @@ body {
 .cid-qDbGV6fZtS blockquote {
   color: #767676;
 }
+.cid-qDbGV6fZtS .mbr-text P {
+  color: #232323;
+}
 .cid-qDbp32kcLP {
   padding-top: 60px;
   padding-bottom: 60px;
